# price-tracker

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: lint.yml  test.yml
assets/prompts/: price_extraction.txt
src/price_tracker/: __main__.py  openai_client.py  product.py  prompts.py  webscraper.py
src/price_tracker/prompts/: price_extraction.txt
src/price_tracker/tests/: test_main.py
tests/: test_main.py  test_product.py
