[project]
name = "price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "requests>=2.33.1",
    "langchain-openai",
]

[project.scripts]
price-tracker = "price_tracker.__main__:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
